--- a/TextConverter/Content/Site.css
+++ b/TextConverter/Content/Site.css
@@ -63,6 +63,12 @@ input[type=submit] {
     margin: 5px 5px;
 }
 
+.autoconverting-block{
+    font-family: 'Times New Roman', Times, serif ;
+    font-size:20px;
+    vertical-align:middle;
+}
+
 .result-block{
     width: 100%;    
     padding: 5px;
